feat(book service): create book endpoint
